examples/test/testpolicy19847.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19847
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key41: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value7
          key11: value47
          key3: value10
      podSelector:
        matchLabels:
          key9: value14
          key27: value40
